--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.6",
+    "qs": "^6.10.3",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
+    "vue-axios-plugin": "^1.3.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
